k8s/apps/openchokin/front/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    external-dns-cloudflare.alpha.kubernetes.io/cloudflare-proxied: "true"
  name: openchokin-front
  namespace: openchokin
spec:
  hostnames:
    - openchokin.walnuts.dev
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - kind: Service
          name: openchokin-front
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
